--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      force_release:
+        type: boolean
+        description: 'Force release even if no version bump detected'
+        required: false
+        default: false
 
 jobs:
   release:
@@ -29,13 +35,13 @@ jobs:
           fi
 
       - name: Configure Git
-        if: steps.version_bump.outputs.is_bump == 'true'
+        if: steps.version_bump.outputs.is_bump == 'true' || inputs.force_release
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Run chart-releaser
-        if: steps.version_bump.outputs.is_bump == 'true'
+        if: steps.version_bump.outputs.is_bump == 'true' || inputs.force_release
         uses: helm/chart-releaser-action@v1.7.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
