fix(antimetal-agent): remove kubernetes.io/version from labelSelectors
label selectors fields are immutable so whenever you try to upgrade the
chart to a new version, it will fail to apply, preventing upgrades. You
would have to uninstall and reinstall the chart.

Signed-off-by: Hamzah Qudsi <hamzah@antimetal.com>

--- a/charts/antimetal-agent/Chart.yaml
+++ b/charts/antimetal-agent/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: antimetal-agent
-description: A Helm chart for Kubernetes
+description: A Helm chart to deploy the Antimetal agent
 type: application
-version: 0.1.1
+version: 0.1.2
 appVersion: "v0.1.1"
 home: https://antimetal.com
