feat(antimetal-agent): bump appVersion to v0.2.0 & add pprof config
v0.2.0 introduces the --prof-address flag which can be used to enable
the pprof server. Add an option in the values.yaml to enable it. The
default is disabled.

Signed-off-by: Hamzah Qudsi <hamzah@antimetal.com>

--- a/charts/antimetal-agent/templates/deployment.yaml
+++ b/charts/antimetal-agent/templates/deployment.yaml
@@ -66,6 +66,9 @@ spec:
             {{- else }}
             - --metrics-bind-address=0
             {{- end }}
+            {{- if .Values.pprof.enable }}
+            - --pprof-address={{ printf ":%s" .Values.pprof.port }}
+            {{- end }}
           env:
             - name: KUBERNETES_NODE_IP
               valueFrom:
